feat(content-api): Implement getbyid for content module
